#84 fix : 인풋창 포커스 보더, trim, overflow:hidden, 이메일 경고문구, 로그인화면 배경

--- a/scss/post_upload.scss
+++ b/scss/post_upload.scss
@@ -63,6 +63,7 @@ main {
 form {
     width: 100%;
     max-height: 500px;
+    overflow: hidden;
 
     &>* {
         display: block;
